fix wrap issues

--- a/style/index.css
+++ b/style/index.css
@@ -60,24 +60,26 @@ nav a:hover{
 
 .container-img {
     width: 90%;
+    min-width: 8rem;
     /* display: inline-block; */
     display: flex;
    
     justify-content: space-around;
     padding: 2% 2% 0 0;
     flex-grow: 1;
+    margin-left: 5%
     
 }
 
 .container-text {
-    width: 50%;
+    min-width: 8rem;
     /* display: inline-block; */
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     text-align: center;
     padding: 7% 0;
-    height: 30%;
+    /* height: 30%; */
     font-family: 'Quicksand', sans-serif;
 }
 
@@ -86,12 +88,13 @@ nav a:hover{
 }
 
 .container-text a {
+    min-width:8rem;
  background-color: #393E46;
  color:#EEEEEE;
  border-radius: 2rem;
  margin: auto;
  padding: 1rem 2rem;
- width: 30%;
+ 
  text-decoration: none;
  font-family: 'Acme', sans-serif;
 }
@@ -100,18 +103,20 @@ nav a:hover{
     background-color:#00ADB5 ;
     color:#ffffff;}
 
-.container-gallery {
+.gallery-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     padding-top: 5%;
     align-items: center;
-    flex-grow: 1;
+    /* flex-grow: 1; */
 }
 
 .gallery-item {
     display: inline-block;
-    width: 21%;
+    min-width: 25rem;
+    
+    /* width: 21%; */
     text-align: center;
     padding-bottom: 2%;
     font-family: 'Acme', sans-serif;
@@ -119,11 +124,10 @@ nav a:hover{
 }
 
 .gallery-item img {
-    width: 90%;
-    
+    width: 90%;  
 }
 .gallery-item img:hover{
-    border: #00ADB5 5px solid;
+    border: #00ADB5 0.5rem solid;
 }
 footer {
     /* display: flex;
